samples/_failures_safe/1761041867_88041d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b4940e1.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_7b4940e1.c:152:12: error: missing terminating " character
  152 |     printf("Text Analysis Results
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7b4940e1.c:152:5: error: expected expression at end of input
  152 |     printf("Text Analysis Results
      |     ^~~~~~
./samples/SAFE/__tmp_7b4940e1.c:152:5: error: expected declaration or statement at end of input
